--- a/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
+++ b/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
@@ -23,9 +23,9 @@ runs:
     - name: start rocketmq server
       shell: bash
       run: |
-        unzip rocketmq-all-4.8.0-bin-release.zip
+        unzip ${ROOT_PATH}/rocketmq-all-4.8.0-bin-release.zip -d ${ROOT_PATH}/rocketmq-all-4.8.0-bin-release
         sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-bin-release/bin/runserver.sh
-        nohup bash rocketmq-all-4.8.0-bin-release/bin/mqnamesrv.sh &
+        nohup bash rocketmq-all-4.8.0-bin-release/bin/mqnamesrv &
     - name: start rocketmq broker
       shell: bash
       run: |
