--- a/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
+++ b/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
@@ -24,10 +24,12 @@ runs:
       shell: bash
       run: |
         unzip rocketmq-all-4.8.0-bin-release.zip
+        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-bin-release/bin/runserver.sh
         nohup bash rocketmq-all-4.8.0-bin-release/bin/mqnamesrv &
     - name: start rocketmq broker
       shell: bash
       run: |
+        sed -i 's/if \[\[ "$JAVA_MAJOR_VERSION" -lt "9" \]\]/if [ "$JAVA_MAJOR_VERSION" -lt "9" ]/g' rocketmq-all-4.8.0-bin-release/bin/runbroker.sh
         sed -i 's/-Xms8g -Xmx8g -Xmn4g/-Xms1g -Xmx1g -Xmn1g/g' rocketmq-all-4.8.0-bin-release/bin/runbroker.sh
         nohup bash rocketmq-all-4.8.0-bin-release/bin/mqbroker -n localhost:9876 &
     - name: download agent
