禁止消费流水线
Signed-off-by: TLPC <470193496@qq.com>

--- a/sermant-integration-tests/pom.xml
+++ b/sermant-integration-tests/pom.xml
@@ -33,5 +33,6 @@
         <module>dubbo-test</module>
         <module>spring-test</module>
         <module>tag-transmission-test</module>
+        <module>mq-consume-prohibition-test</module>
     </modules>
 </project>
