--- a/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
+++ b/.github/actions/scenarios/tag-transmission/rocketmq/action.yml
@@ -18,14 +18,14 @@ runs:
       shell: bash
       run: |
         unzip rocketmq-all-5.1.4-bin-release.zip
-        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms1g -Xmx1g -Xmn512m/g' rocketmq-all-5.1.4-bin-release/bin/runserver.sh
-        sed -i 's/-Xms4g -Xmx4g/-Xms1g -Xmx1g/g' rocketmq-all-5.1.4-bin-release/bin/runserver.sh
+        sed -i 's/-Xms4g -Xmx4g -Xmn2g/-Xms2g -Xmx2g -Xmn1g/g' rocketmq-all-5.1.4-bin-release/bin/runserver.sh
+        sed -i 's/-Xms4g -Xmx4g/-Xms2g -Xmx2g/g' rocketmq-all-5.1.4-bin-release/bin/runserver.sh
         nohup bash rocketmq-all-5.1.4-bin-release/bin/mqnamesrv &
     - name: start rocketmq broker
       shell: bash
       run: |
-        sed -i 's/-Xmn4g/-Xmn512m/g' rocketmq-all-5.1.4-bin-release/bin/runbroker.sh
-        sed -i 's/-Xms8g -Xmx8g/-Xms1g -Xmx1g/g' rocketmq-all-5.1.4-bin-release/bin/runbroker.sh
+        sed -i 's/-Xmn4g/-Xmn1g/g' rocketmq-all-5.1.4-bin-release/bin/runbroker.sh
+        sed -i 's/-Xms8g -Xmx8g/-Xms2g -Xmx2g/g' rocketmq-all-5.1.4-bin-release/bin/runbroker.sh
         nohup bash rocketmq-all-5.1.4-bin-release/bin/mqbroker -n localhost:9876 &
     - name: package demos
       shell: bash
