mongodb数据库禁写插件测试问题修复
Signed-off-by: daizhenyu <1449308021@qq.com>

--- a/sermant-plugins/sermant-database-write-prohibition/pom.xml
+++ b/sermant-plugins/sermant-database-write-prohibition/pom.xml
@@ -11,6 +11,9 @@
 
     <artifactId>sermant-database-write-prohibition</artifactId>
     <packaging>pom</packaging>
+    <modules>
+        <module>mongodb-3.x-plugin</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
