--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -10,8 +10,8 @@ runs:
     - name: start mysql
       shell: bash
       run: |
-        sudo yum -y install https://dev.mysql.com/get/mysql80-community-release-el7-3.noarch.rpm
-        sudo yum -y install mysql-community-server
+        sudo apt-get update
+        sudo apt-get install -y mysql-server
         sudo systemctl start mysqld
         sudo systemctl enable mysqld
     - name: Set up root password
