--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -12,7 +12,9 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install -y mysql-server
-        systemctl status mysql.service
+        sudo systemctl status mysql.service
+        sudo systemctl start mysql.service
+        sudo systemctl status mysql.service
 #    - name: Set up root password
 #      shell: bash
 #      run: |
