--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -12,9 +12,10 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install -y mysql-server
+        sudo sed -i '/^\[mysqld\]/a skip-grant-tables' /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
-        sudo cat -n /etc/mysql/mysql.conf.d/mysqld.cnf
+        sudo mysql -u root -p
 #    - name: Set up root password
 #      shell: bash
 #      run: |
