--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -16,6 +16,13 @@ runs:
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
         sudo mysql -u root -p
+    - name: start mongodb
+      shell: bash
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y mongodb
+        sudo systemctl start mongodb
+        sudo systemctl status mongodb
 #    - name: Set up root password
 #      shell: bash
 #      run: |
