--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -16,7 +16,7 @@ runs:
         cat /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
-        sudo mysql -u root -p
+        sudo mysql -u root -p -e "CREATE DATABASE IF NOT EXISTS test;"
 #    - name: package demos
 #      shell: bash
 #      run: |
