--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -14,7 +14,16 @@ runs:
         sudo apt-get update
         sudo apt-get install -y mysql-server
         sudo systemctl start mysql.service
-        sudo sudo mysql_secure_installation
+        sudo mysql_secure_installation << EOF
+        n
+        y
+        "$TEST_SECRET"
+        "$TEST_SECRET"
+        y
+        n
+        n
+        y
+        EOF
         sudo systemctl status mysql.service
 #        echo ""|sudo mysql -u root -p -e "CREATE DATABASE IF NOT EXISTS test;"
 #    - name: package demos
