--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -12,10 +12,12 @@ runs:
       run: |
         sudo apt-get update
         sudo apt-get install -y mysql-server
+        sudo sed -i '/^\[mysqld\]/a skip-grant-tables' /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
-        TEMP_PASSWORD=$(grep "A temporary password" /var/log/mysqld.log | awk '{print $NF}')
-        echo "Temporary Password: $TEMP_PASSWORD"
+        sudo mysql -u root
+#        TEMP_PASSWORD=$(grep "A temporary password" /var/log/mysqld.log | awk '{print $NF}')
+#        echo "Temporary Password: $TEMP_PASSWORD"
 #        sudo mysql_secure_installation << EOF
 #        n
 #        y
