--- a/.github/workflows/database_write_prohibition_integration_test.yml
+++ b/.github/workflows/database_write_prohibition_integration_test.yml
@@ -116,13 +116,13 @@ jobs:
       matrix:
         include:
           - mysqlClientVersion: "2.6.2"
-#          - mysqlClientVersion: "2.7.6"
-#          - mysqlClientVersion: "2.7.12"
-#          - mysqlClientVersion: "3.0.6"
-#          - mysqlClientVersion: "3.0.11"
-#          - mysqlClientVersion: "3.1.4"
-#          - mysqlClientVersion: "3.2.0"
-#          - mysqlClientVersion: "3.3.3"
+          - mysqlClientVersion: "2.7.6"
+          - mysqlClientVersion: "2.7.12"
+          - mysqlClientVersion: "3.0.6"
+          - mysqlClientVersion: "3.0.11"
+          - mysqlClientVersion: "3.1.4"
+          - mysqlClientVersion: "3.2.0"
+          - mysqlClientVersion: "3.3.3"
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
