--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -13,11 +13,13 @@ runs:
         sudo apt-get update
         sudo apt-get install -y mysql-server
         sudo sed -i '/^\[mysqld\]/a skip-grant-tables' /etc/mysql/mysql.conf.d/mysqld.cnf
-        sudo sed -i '/^\s*#\|^#.*\(pid-file\|socket\|port\|datadir\)/ s/^#*\s*//' /etc/mysql/mysql.conf.d/mysqld.cnf
+        sudo sed -i '/^\s*#\s*\(pid-file\|socket\|port\|datadir\)/ s/^#\s*//' /etc/mysql/mysql.conf.d/mysqld.cnf
         cat /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
+        echo "kaishi"
         cat /var/log/mysql/error.log
+        echo "jieshu"
         sudo mysql -u root -e "CREATE DATABASE IF NOT EXISTS test;"
 #        TEMP_PASSWORD=$(grep "A temporary password" /var/log/mysqld.log | awk '{print $NF}')
 #        echo "Temporary Password: $TEMP_PASSWORD"
