--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -20,6 +20,7 @@ runs:
         echo "kaishi"
         cat /var/log/mysql/error.log
         echo "jieshu"
+        curl 127.0.0.1:3306
         result=$(sudo mysql -u root -s -e "CREATE DATABASE IF NOT EXISTS test;" 2>&1)
         echo "$result"
 #        TEMP_PASSWORD=$(grep "A temporary password" /var/log/mysqld.log | awk '{print $NF}')
