--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -16,12 +16,16 @@ runs:
         cat /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
+        sudo mysql -u root -s -e "CREATE DATABASE IF NOT EXISTS test;"
         echo "kaishi"
         cat /var/log/mysql/error.log
         echo "jieshu"
-        curl 127.0.0.1:3306
         result=$(sudo mysql -u root -s -e "CREATE DATABASE IF NOT EXISTS test;" 2>&1)
         echo "$result"
+    - name: check status
+      shell: bash
+      run: |
+
 #        TEMP_PASSWORD=$(grep "A temporary password" /var/log/mysqld.log | awk '{print $NF}')
 #        echo "Temporary Password: $TEMP_PASSWORD"
 #        sudo mysql_secure_installation << EOF
