--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -16,6 +16,7 @@ runs:
         cat /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
+        cat /etc/mysql/debian.cnf
         sudo mysql -u root -s -e "CREATE DATABASE IF NOT EXISTS test;"
         echo "kaishi"
         cat /var/log/mysql/error.log
