--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -16,17 +16,13 @@ runs:
         cat /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
-        cat /etc/mysql/debian.cnf
-        sudo mysql -u root -s -e "CREATE DATABASE IF NOT EXISTS test;"
+        sudo cat /etc/mysql/debian.cnf
+        sudo mysql -u root -e "CREATE DATABASE IF NOT EXISTS test;"
         echo "kaishi"
         cat /var/log/mysql/error.log
         echo "jieshu"
         result=$(sudo mysql -u root -s -e "CREATE DATABASE IF NOT EXISTS test;" 2>&1)
         echo "$result"
-    - name: check status
-      shell: bash
-      run: |
-
 #        TEMP_PASSWORD=$(grep "A temporary password" /var/log/mysqld.log | awk '{print $NF}')
 #        echo "Temporary Password: $TEMP_PASSWORD"
 #        sudo mysql_secure_installation << EOF
