--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -17,6 +17,11 @@ runs:
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
         sudo cat /etc/mysql/debian.cnf
+        if sudo lsof -Pi :3306 -sTCP:LISTEN -t >/dev/null ; then
+          echo "MySQL is running and listening on port 3306"
+        else
+          echo "MySQL is not running or not listening on port 3306"
+        fi
         sudo mysql -u root -e "CREATE DATABASE IF NOT EXISTS test;"
         echo "kaishi"
         cat /var/log/mysql/error.log
