--- a/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
+++ b/.github/actions/scenarios/database-write-prohibition/mysql/action.yml
@@ -16,7 +16,10 @@ runs:
         cat /etc/mysql/mysql.conf.d/mysqld.cnf
         sudo systemctl start mysql.service
         sudo systemctl status mysql.service
-        sudo cat /etc/mysql/debian.cnf
+        config_file="/etc/mysql/debian.cnf"
+        password=$(awk -F "=" '/password/ {print $2}' "$config_file" | tr -d '[:space:]')
+        echo "Password is: $password"
+        cat /etc/mysql/debian.cnf
         if sudo lsof -Pi :3306 -sTCP:LISTEN -t >/dev/null ; then
           echo "MySQL is running and listening on port 3306"
         else
