xDS Service Discovery Integration Test
Signed-off-by: daizhenyu <1449308021@qq.com>

--- a/sermant-agentcore/sermant-agentcore-config/config/test/config.properties
+++ b/sermant-agentcore/sermant-agentcore-config/config/test/config.properties
@@ -34,6 +34,8 @@ agent.service.inject.enable=true
 agent.service.dynamic.config.enable=true
 # HTTP server switch
 agent.service.httpserver.enable=false
+# xDS service switch
+agent.service.xds.service.enable=false
 #============================= Event configuration =============================#
 # Event switch
 event.enable=false
@@ -91,6 +93,13 @@ gateway.nettyPort=6888
 #gateway.initReconnectInternalTime=5
 # Specify retreat algorithm maximum connection interval (s)
 #gateway.maxReconnectInternalTime=180
+#=============================xds configuration===============================#
+# istiod control plane address, security.enable=false with 15010 port, and security.enable=true with 15012 port
+xds.config.control.plane.address=istiod.istio-system.svc:15010
+# Whether to use secure communication with the control plane
+xds.config.security.enable=false
+# service account token used for secure communication with the control plane
+xds.config.service.account.token.path=/var/run/secrets/kubernetes.io/serviceaccount/token
 #=============================Metadata===============================#
 # Service name for host service instance
 service.meta.service=default
