--- a/sermant-integration-tests/xds-service-test/script/spring-client.yaml
+++ b/sermant-integration-tests/xds-service-test/script/spring-client.yaml
@@ -18,11 +18,19 @@ spec:
         imagePullPolicy: Never
         ports:
         - containerPort: 8080
+        volumeMounts:
+        - name: log-volume
+          mountPath: /log/sermant-logs
         env:
         - name: agent_service_dynamic_config_enable
           value: "false"
         - name: agent_service_xds_service_enable
           value: "true"
+      volumes:
+      - name: log-volume
+        hostPath:
+          path: /Users/daizhenyu/work/logs
+          type: Directory
       imagePullSecrets:
         - name: default-secret
 ---
