xDS Service Discovery Integration Log - 4
Signed-off-by: daizhenyu <1449308021@qq.com>

--- a/.github/actions/common/entry/action.yml
+++ b/.github/actions/common/entry/action.yml
@@ -15,6 +15,9 @@ runs:
         mkdir -p ${log_dir}
         echo "logDir=${log_dir}" >> $GITHUB_ENV
         echo "=======check log dir======"
+        echo ${log_dir}
+        echo $PWD
+        ls -l
         ls -l ${log_dir}
 
 
