xds new package
Signed-off-by: daizhenyu <1449308021@qq.com>

--- a/sermant-integration-tests/xds-service-test/script/spring-client.yaml
+++ b/sermant-integration-tests/xds-service-test/script/spring-client.yaml
@@ -23,6 +23,8 @@ spec:
           value: "false"
         - name: agent_service_xds_service_enable
           value: "true"
+        - name: agent_config_ignoredPrefixes
+          value: ""
       imagePullSecrets:
         - name: default-secret
 ---
