--- a/sermant-integration-tests/xds-service-test/script/spring-client-subscribe.yaml
+++ b/sermant-integration-tests/xds-service-test/script/spring-client-subscribe.yaml
@@ -27,6 +27,8 @@ spec:
           value: "false"
         - name: agent_service_xds_service_enable
           value: "true"
+        - name: agent_config_ignoredPrefixes
+          value: ""
         - name: xds_service_discovery_upstreamServiceName
           value: "spring-server"
         - name: xds_service_discovery_type
