--- a/sermant-integration-tests/xds-service-test/spring-server/pom.xml
+++ b/sermant-integration-tests/xds-service-test/spring-server/pom.xml
@@ -31,7 +31,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring.version}</version>
                 <configuration>
-                    <mainClass>io.demo.spring.server.SpringServerApplication</mainClass>
+                    <mainClass>io.sermant.demo.spring.server.SpringServerApplication</mainClass>
                     <finalName>spring-server</finalName>
                     <outputDirectory>${pom.basedir}/../product/spring-server</outputDirectory>
                 </configuration>
