xds new package - 2
Signed-off-by: daizhenyu <1449308021@qq.com>

--- a/sermant-integration-tests/xds-service-test/script/spring-client.yaml
+++ b/sermant-integration-tests/xds-service-test/script/spring-client.yaml
@@ -24,7 +24,7 @@ spec:
         - name: agent_service_xds_service_enable
           value: "true"
         - name: agent_config_ignoredPrefixes
-          value: ""
+          value: "com.huaweicloud.sermant"
       imagePullSecrets:
         - name: default-secret
 ---
