--- a/.github/actions/scenarios/xds-service/xds-service-discovery/action.yml
+++ b/.github/actions/scenarios/xds-service/xds-service-discovery/action.yml
@@ -62,9 +62,10 @@ runs:
       shell: bash
       run: |
         kubectl delete -f sermant-integration-tests/xds-service-test/script/spring-client.yaml
+        sleep 5s
         kubectl apply -f sermant-integration-tests/xds-service-test/script/spring-client-subscribe.yaml
         kubectl wait --for=condition=ready pod -l app=spring-client --timeout=10s
-        kubectl port-forward svc/spring-client 8080:8080 &
+        kubectl port-forward svc/spring-client-subscribe 8080:8080 &
     - name: test sermant xds service use security mode
       shell: bash
       run: |
