--- a/sermant-integration-tests/xds-service-test/script/spring-client-subscribe.yaml
+++ b/sermant-integration-tests/xds-service-test/script/spring-client-subscribe.yaml
@@ -49,7 +49,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring-client
+  name: spring-client-subscribe
 spec:
   type: ClusterIP
   ports:
