--- a/.github/actions/scenarios/xds-service/xds-service-discovery/action.yml
+++ b/.github/actions/scenarios/xds-service/xds-service-discovery/action.yml
@@ -65,6 +65,7 @@ runs:
         sleep 5s
         kubectl apply -f sermant-integration-tests/xds-service-test/script/spring-client-subscribe.yaml
         kubectl wait --for=condition=ready pod -l app=spring-client --timeout=10s
+        pkill -f "kubectl port-forward svc/spring-client"
         kubectl port-forward svc/spring-client 8080:8080 &
     - name: test sermant xds service use security mode
       shell: bash
