--- a/sermant-integration-tests/xds-service-test/product/spring-server/Dockerfile
+++ b/sermant-integration-tests/xds-service-test/product/spring-server/Dockerfile
@@ -1,5 +1,6 @@
 FROM openjdk:8
 WORKDIR /home
+COPY agent/ /home/agent
 COPY spring-server.jar /home/spring-server.jar
 COPY start.sh /home
 RUN chmod -R 777 /home
